chore(groovyConsole): add solution for `groovyConsole fails on JDK 23+` caused by `javax.swing.JApplet ` removed from Java JDK 26.0.1
Reference:
- https://openjdk.org/jeps/504
- https://github.com/apache/groovy/blob/GROOVY_5_0_X/subprojects/groovy-console/src/main/groovy/groovy/console/ui/Console.groovy#L420

Signed-off-by: marslo <marslo.jiao@gmail.com>